# researchops-agent

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
configs/: suggested.yaml  time_series_demo.yaml
docs/: api_reference.md  architecture.md  cli_reference.md  demo_script.md  portfolio_summary.md  project_report.md  safety_and_scope.md
examples/: workflow_queries.md
examples/docs/: graph_kernel_note.md  researchops_note.md  time_series_note.md
examples/eval/: answer_cases.json  corpus_retrieval_cases.json  retrieval_cases.json
scripts/: __init__.py  generate_demo_artifacts.py
tests/: test_answer_eval.py  test_api.py  test_api_workflow.py  test_chunking.py  test_claim_extractor.py  test_cli_corpus.py  test_cli_eval.py  test_cli_llm.py  test_cli_researchops.py  test_cli_runner.py  test_cli_workflow.py  test_compare_retrievers.py  test_config_builder.py  test_corpus_builder.py  test_corpus_discovery.py  test_corpus_eval.py  test_corpus_index.py  test_corpus_pipeline.py  test_corpus_search.py  test_embedding_retriever.py  test_evaluation_report.py  test_evaluation_schemas.py  test_evidence.py  test_experiment_runner.py  test_extractive.py  test_forecasting.py  test_health.py  test_ingestion.py  test_json_io.py  test_llm_answer_eval.py  test_llm_pipeline.py  test_llm_provider.py  test_llm_schemas.py  test_llm_validation.py  test_load_eval_cases.py  test_pipeline.py  test_portfolio_packaging.py  test_project_files.py  test_report_builder.py  test_retrieval.py  (+11 more)
(+68 files in other folders)
