[project]
name = "researchops-agent"
version = "0.1.0"
description = "Citation-grounded AI research assistant for ML papers, docs, and bounded experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
"fastapi",
"uvicorn",
"pydantic",
"python-dotenv",
"pyyaml",
"pypdf",
"markdown",
"numpy",
"pandas",
"scikit-learn",
"sentence-transformers",
"streamlit",
"faiss-cpu",
"typer",
"rich",
"pytest",
"ruff",
]

[project.scripts]
researchops = "researchops_agent.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
